--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "homepage": "https://darsh2987.github.io/movie-database/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
